# polyglot-voice-bench

./: .env.example  .gitignore  DECISIONS.md  METHODOLOGY.md  Makefile  README.md  RECORDING_PROTOCOL.md  pyproject.toml
data/own_voice/: LICENSE  manifest.csv
results/: metrics_assemblyai_en_us.json  metrics_assemblyai_hi_in.json  metrics_assemblyai_ne_np.json  metrics_assemblyai_u2_en_us.json  metrics_assemblyai_u2_hi_in.json  metrics_assemblyai_u2_ne_np.json  metrics_deepgram_en_us.json  metrics_deepgram_hi_in.json  metrics_deepgram_ne_np.json  metrics_groq_whisper_en_us.json  metrics_groq_whisper_hi_in.json  metrics_groq_whisper_ne_np.json
scripts/: run_v0.py  run_v1.py  run_v2.py  run_v2b.py  run_v3.py  split_recording.py
src/: metrics.py  normalize.py  runner.py  types.py
src/datasets/: fleurs.py  own_voice.py
src/providers/: assemblyai_universal2.py  assemblyai_universal3_pro.py  base.py  deepgram_nova3_multi.py  groq_whisper_large_v3.py
tests/: test_metrics.py
tests/fixtures/: README.md
