[project]
name = "polyglot-voice-bench"
version = "0.0.1"
description = "Reproducible benchmark of voice AI on Hindi, Nepali, Hinglish, and accented English"
requires-python = ">=3.11"
dependencies = [
    "deepgram-sdk>=3.0.0",
    "datasets>=2.14.0,<3.0.0",
    "jiwer>=3.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "pytest>=7.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "soundfile>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
